src/test/deca/context/invalid/created/return/return_int_float.deca
// Description :
//    return mauvais type : float, demandé int
// Resultats :
//		Erreur contextuelle
//    	Ligne 9: ?? 

class A{
int met(){
return 0.5;
}
}